--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>International Heli Cup</title>  
+</head>
+<body>
+<p1>Tornment</p1>
+<p2>Tornment info will go here</p2>
+<p3>Tornment date will go here</p3> 
+</body>
 </html>
