--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>International Heli Cup</title>  
+<title>International Heli Cup</title>
+<style>
+body {
+  background-image: url('https://tr.rbxcdn.com/180DAY-e423bf374f1bb073ebb441e384d84a13/768/432/Image/Webp/noFilter');
+}
+</style>
 </head>
 <body>
 <p1>Tornment</p1>
