--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ body {
 </style>
 </head>
 <body>
-<p1>Tornment</p1>
+<h1 style="font-size: 20;"> Tournament </h1>
 <p2>Tornment info will go here</p2>
 <p3>Tornment date will go here</p3> 
 </body>
