--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <title>International Heli Cup</title>
 <style>
 body {
-  background-image: url('https://raw.githubusercontent.com/Athael-rl/Heli-Wars.github.io/refs/heads/main/images/nyancat.png')
+  background-image: url('')
 }
 </style>
 </head>
 <body>
-<h1><center>Tournaments!</center></h1>
+<h1 style="font-size: 25"; text-align: centre></h1>
 <p2>Tornment info will go here</p2>
 <p3>Tornment date will go here</p3> 
 </body>
