--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ body {
 </style>
 </head>
 <body>
-<h1 style="font-size: 25"; text-align: centre></h1>
-<p2>Tornment info will go here</p2>
-<p3>Tornment date will go here</p3> 
+<h1 style="font-size: 25"; text-align: centre>Tournament!<br /></h1>
+<p2>Tornment info will go here<br /></p2>
+<p3>Tornment date will go here<br /></p3> 
 </body>
 </html>
